# nse_trader

./: .gitignore  README.md  app.py  data_validator.py  docker-compose.yml  pyproject.toml  qc-results.md  test-api.html
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  fetch_fundamentals.py  fetch_real_ohlcv.py  generate_asi.py  purge_synthetic.py  pyproject.toml  qc_full_check.py  qc_scores.py  requirements.txt  run_backtest.py  run_ngx_backfill.py  scan_today.py  scheduler.py  scrape_dividends.py  scrape_stockanalysis.py  seed_demo.py  seed_real.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_milestone_ab_tables.py  003_security_and_fk_constraints.py  004_scanner_tables.py
backend/app/: main.py  models.py
backend/app/cli/: auth.py  backfill.py  corporate_actions.py  fundamentals.py  scanner.py  scheduler.py
backend/app/core/: config.py  explanation_generator.py  http.py  market_regime.py  recommendation_engine.py  risk_calculator.py
backend/app/data/: DATA_SOURCES.md  UNIVERSE_CONTRACT.md  circuit_breaker.py  universe.py
backend/app/db/: __init__.py  engine.py  models.py
backend/app/fundamentals/: __init__.py  dividends.py  sector.py  valuation.py
backend/app/indicators/: __init__.py  base.py  composite.py  momentum.py  trend.py  volatility.py  volume.py
backend/app/knowledge/: __init__.py  base.py  lessons.py
backend/app/market_data/: __init__.py
backend/app/middleware/: auth.py  provenance.py
backend/app/scanner/: __init__.py  __main__.py  derived_metrics.py  explainer.py  fundamentals_csv.py  quality_scorer.py  scheduled.py  universe.py  workflow.py
backend/app/schemas/: __init__.py  market.py  recommendation.py  scanner.py  stock.py  user.py
backend/app/scrapers/: __init__.py  base.py  ngnmarket_fundamentals.py  runner.py  stockanalysis.py  store.py  valuation.py
backend/app/services/: __init__.py  audit.py  backtester.py  confidence.py  confidence_scoring.py  summary.py  (+26 more)
backend/data/: dividends_ngx.csv  fundamentals.csv  fundamentals_consolidated.csv  fundamentals_fresh.csv  fundamentals_ngx.csv
backend/tests/: __init__.py  drill_circuit_breaker.py  test_alembic_smoke.py  test_audit_query.py  test_backfill_cli.py  test_beta_security.py  test_circuit_breaker.py  test_confidence_consolidated.py  test_confidence_scoring.py  test_corporate_actions.py  test_decomposition.py  test_decomposition_api.py  test_explainability.py  test_fundamentals.py  test_g1_real_ohlcv.py  test_g2_real_asi.py  test_g4_backfill.py  test_growth_scorer.py  test_historical_coverage.py  test_historical_storage.py  test_http_client.py  test_ingestion_hardening.py  test_macro_data.py  test_market_regime_engine.py  test_ngx_official_list.py  test_performance_engine.py  test_performance_reenable.py  test_performance_tracking.py  test_phase0_audit.py  test_portfolio_api.py  test_portfolio_core.py  test_portfolio_risk.py  test_price_reconciliation.py  test_probabilistic_bias.py  test_provenance_enforcement.py  test_quality_scorer.py  test_rebalance_orchestrator.py  test_recommendation.py  test_reproducibility.py  test_scanner_api.py  (+19 more)
(+159 files in other folders)
