[tool.poetry]
name = "nse-trader"
version = "0.1.0"
description = "Nigerian Stock Exchange Trading Analysis Platform"
authors = ["NSE Trader Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.1.0"
pandas = "^2.2.3"
requests = "^2.32.3"
flask-cors = "^5.0.1"
python-dotenv = "^1.0.1"
tradingview-ta = "^3.3.0"
waitress = "^3.0.0"
redis = "^4.5.5"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.0"
isort = "^5.13"
mypy = "^1.10"
types-requests = "^2.32"

[tool.poetry.group.test.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
pytest-mock = "^3.12"

[tool.poetry.group.security.dependencies]
safety = "^2.3.5"
bandit = "^1.7.5"

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
strict = true

[tool.poetry.scripts]
nse-trader = "app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
