[tool.poetry]
name = "nse-trader"
version = "0.2.0"
description = "NSE Trader - Nigerian Stock Exchange Trading Analysis Platform (FastAPI + Next.js)"
authors = ["NSE Trader Team"]
readme = "README.md"
packages = [{include = "app", from = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = {extras = ["email"], version = "^2.0.0"}
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
httpx = "^0.27.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
beautifulsoup4 = "4.12.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.0"
pdfplumber = "^0.11.0"
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^25.1.0"
flake8 = "^7.0"
isort = "^5.13"
mypy = "^1.10"
pytest-cov = "^5.0"
pytest-mock = "^3.12"
safety = "^2.3.5"
bandit = "^1.7.5"
aiosqlite = "^0.20.0"

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
